--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,42 @@
-<p>Hello World!!!</p>
+<div class="row">
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Brand</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Link</a></li>
+        </ul>
+        <form class="navbar-form navbar-left" role="search">
+            <button type="submit" class="btn btn-md btn-danger">Submit</button>
+        </form>    
+        </div>
+    </div>
+    </nav>
+</div>
+
+<div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 banner-image text-center"> 
+        <h1>Mongo Scraper</h1>
+        <h3>New York Times Edition</h3>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">  
+        <div class="panel panel-warning">
+            <div class="panel-heading">
+                <h3 class="panel-title">Looks like you have no Articles Yet!!</h3>
+            </div>
+        </div>
+    </div>
+ </div>
