--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,23 +8,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="#">Mongo Scraper</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
+            <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">Saved Articles</a></li>
         </ul>
         <form class="navbar-form navbar-left" role="search">
-            <button type="submit" class="btn btn-md btn-danger">Submit</button>
+            <button type="button" class="btn btn-md btn-danger" data-toggle="modal" data-target="#scrapeModal">Scrape</button>
         </form>    
         </div>
     </div>
     </nav>
-</div>
 
-<div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 banner-image text-center"> 
         <h1>Mongo Scraper</h1>
         <h3>New York Times Edition</h3>
@@ -33,10 +31,33 @@
 
 <div class="container-fluid">
     <div class="row">  
-        <div class="panel panel-warning">
+        <div class="panel panel-warning text-center">
             <div class="panel-heading">
                 <h3 class="panel-title">Looks like you have no Articles Yet!!</h3>
             </div>
         </div>
     </div>
  </div>
+
+<!--- Modal-->
+
+<!-- Modal -->
+<div class="modal" id="scrapeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
