--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,8 +16,8 @@
             <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Saved Articles</a></li>
         </ul>
-        <form class="navbar-form navbar-left" role="search">
-            <button type="button" class="btn btn-md btn-danger" data-toggle="modal" data-target="#scrapeModal">Scrape</button>
+        <form class="navbar-form navbar-left" action="/api/scrape" method="POST">
+            <button type="submit" class="btn btn-md btn-danger" data-toggle="modal" data-target="#scrapeModal">Scrape New Artcles</button>
         </form>    
         </div>
     </div>
@@ -38,8 +38,6 @@
         </div>
     </div>
  </div>
-
-<!--- Modal-->
 
 <!-- Modal -->
 <div class="modal" id="scrapeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
