--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,6 +17,7 @@
             <li><a href="#">Saved Articles</a></li>
         </ul>
         <form class="navbar-form navbar-left" action="/api/scrape" method="POST">
+            <input type="hidden" value="">
             <button type="submit" class="btn btn-md btn-danger" data-toggle="modal" data-target="#scrapeModal">Scrape New Artcles</button>
         </form>    
         </div>
