--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
             <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Saved Articles</a></li>
         </ul>
-        <form class="navbar-form navbar-left" action="/api/scrape" method="POST">
+        <form class="navbar-form navbar-left scrape" action="/api/scrape" method="POST">
             <input type="hidden" value="">
             <button type="submit" class="btn btn-md btn-danger" data-toggle="modal" data-target="#scrapeModal">Scrape New Artcles</button>
         </form>    
@@ -32,11 +32,13 @@
 
 <div class="container-fluid">
     <div class="row">  
-        <div class="panel panel-warning text-center">
+     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="panelSection">  
+        <div class="panel panel-warning text-center" id="noneDiv">
             <div class="panel-heading">
                 <h3 class="panel-title">Looks like you have no Articles Yet!!</h3>
             </div>
         </div>
+     </div>
     </div>
  </div>
 
