--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,28 +1,5 @@
 <div class="row">
-    <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Mongo Scraper</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Saved Articles</a></li>
-        </ul>
-        <form class="navbar-form navbar-left scrape" action="/api/scrape" method="POST">
-            <input type="hidden" value="">
-            <button type="submit" class="btn btn-md btn-danger" data-toggle="modal" data-target="#scrapeModal">Scrape New Artcles</button>
-        </form>    
-        </div>
-    </div>
-    </nav>
+  {{>elements/navbar}}
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 banner-image text-center"> 
         <h1>Mongo Scraper</h1>
