--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,12 +1,44 @@
 {{>elements/navbar}}
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 banner-image text-center"> 
+        <h1>Mongo Scraper</h1>
+        <h3>New York Times Edition</h3>
+    </div>
 
-<ul class="list-group">
-    {{#each contents}}
-  <li class="list-group-item">
-    <h4 class="list-group-item-heading">{{this.title}}</h4>
-    <h4 class="list-group-item-text">Job Description: {{this.description}}</h4>
-    <p class="list-group-item-text"><a href="/jobs/{{this.id}}">View the full page</p></a>
-    <p class="list-group-item-text">Posted by: <a href="/users/{{this.Client.username}}/profile">{{this.Client.username}}</p></a>
-  </li>
-  {{/each}}
-  </ul>
+{{#each contents}}
+  <div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">{{this.title}}</h3>
+  
+  </div>
+  <div class="panel-body">
+    Panel content
+       <form class="pull-right" action="/note" method="POST">
+            <button type="submit" class="btn btn-md btn-danger">Delete From Saved</button>
+    </form>
+    
+            <buttontype="submit" class="btn btn-md btn-info pull-right" data-toggle="modal" data-target="#noteeModal">Make a Note </button>
+  </div>
+</div>
+{{/each}}
+
+<div class="modal" id="noteeModal" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Article Notes</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        
+      </div>
+      <div class="modal-footer">
+          <form >
+              <input type="textarea" name ="note" rows="5"> 
+         <button type="button" class="btn btn-success" data-dismiss="modal">Save Note</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
