Modla Added for Adding Notes

--- a/views/partials/elements/navbar.handlebars
+++ b/views/partials/elements/navbar.handlebars
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Saved Articles</a></li>
+            <li><a href="/articles">Saved Articles</a></li>
         </ul>
         <form class="navbar-form navbar-left scrape" action="/api/scrape" method="POST">
             <input type="hidden" value="">
