--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -34,7 +34,7 @@
         
       </div>
       <div class="modal-footer">
-          <form >
+          <form action="/articles/{{this.id}}" method="POST">
               <input type="textarea" name ="note" rows="5"> 
          <button type="button" class="btn btn-success" data-dismiss="modal">Save Note</button>
         </form>
