Fixed Note Save Issue in Routing

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,5 +16,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script src="assets/js/site.js"></script>
+<script>
+  $('#noteButton').click(function(){
+    console.log(contents);
+  })
+</script>
 </body>
 </html>
