--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -10,12 +10,11 @@
     <h3 class="panel-title">{{this.title}}</h3>
   </div>
   <div class="panel-body">
-    
        <form class="pull-right" action="/note" method="POST">
             <button type="submit" class="btn btn-md btn-danger">Delete From Saved</button>
       </form>
-    
             <button type="submit" class="btn btn-md btn-info pull-right" id= "noteButton" data-toggle="modal" data-target="#noteModal">Make a Note </button>
+            <button type="button" class="btn btn-md btn-info pull-left getNotes" >See Notes </button>
   </div>
 </div>
 {{/each}}
