--- a/views/partials/elements/navbar.handlebars
+++ b/views/partials/elements/navbar.handlebars
@@ -1,24 +1,24 @@
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Mongo Scraper</a>
-        </div>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home <span class="sr-only">(current)</span></a></li>
-            <li><a href="/articles">Saved Articles</a></li>
-        </ul>
-        <form class="navbar-form navbar-left scrape" action="/api/scrape" method="POST">
+ <nav class="navbar navbar-expand-xl navbar-light bg-dark">
+  <a class="navbar-brand" href="#">Mongo Scraper</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/articles">Saved</a>
+      </li>
+      <li class="nav-item">
+          <form class="navbar-form navbar-left scrape" action="/api/scrape" method="POST">
             <input type="hidden" value="">
-            <button type="submit" class="btn btn-md btn-danger" data-toggle="modal" data-target="#scrapeModal">Scrape New Artcles</button>
-        </form>    
-        </div>
-    </div>
-    </nav>
+            <button type="submit" class="btn btn-md btn-danger" data-toggle="modal" id = "scrapeButton" data-target="#scrapeModal">Scrape New Artcles</button>
+        </form> 
+      </li>
+   
+    </ul>
+  </div>
+</nav>
