--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,30 +1,18 @@
   {{>elements/navbar}}
-<div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 banner-image text-center"> 
-        <h1>Mongo Scraper</h1>
-        <h3>New York Times Edition</h3>
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 banner-image text-center"> 
+            <h1>Mongo Scraper</h1>
+            <h3>New York Times Edition</h3>
+        </div>
     </div>
-</div>
 
-<div class="container-fluid">
-    <div class="row">  
-     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="panelSection">  
-        <div class="panel panel-warning text-center" id="noneDiv">
-            <div class="panel-heading">
-                <h3 class="panel-title">Looks like you have no Articles Yet!!</h3>
+
+    <div class="row" id="panelSection">  
+        <div class="row" id="noneDiv">
+            <div class="center-align">
+                <h3 class="panel-title flow-text">Looks like you have no Articles Yet!!</h3>
             </div>
         </div>
-     </div>
     </div>
- </div>
 
-  <!-- Modal Structure -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
+
