--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
     </div>
 
 
-    <div class="row" id="panelSection">  
+    <div class="container" id="panelSection">  
         <div class="row" id="noneDiv">
             <div class="center-align">
                 <h3 class="panel-title flow-text">Looks like you have no Articles Yet!!</h3>
