--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -5,9 +5,9 @@
     </div>
 
 
-<div class="row">
+<div class="container">
   {{#each contents}}
-    <div class="col s12 m3 l4 articlePanel" data-id ={{this.id}}>
+    <div class="col s12 m12 l12 articlePanel" data-id ={{this.id}}>
       {{!-- <h2 class="header">Saved Article</h2> --}}
       <div class="card horizontal red lighten-3 hoverable">
         <div class="card-stacked">
