Changed Scrape Adress to NY Times and Changed Cheerio Logic to refelct new changes in NY Times Site. (Reddit was no longer working)

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,6 +24,12 @@
     margin:25px;
 }
 
+.note{
+    width: 33%;
+    height:33%;
+    background-color: white;
+}
+
 @media screen and (max-width: 434px) {
     .deleteButton {
       margin-left:60px;
